:cake: fix updateForm type check & sidebar collapse pop

--- a/src/components/SideBar/style/index.less
+++ b/src/components/SideBar/style/index.less
@@ -9,8 +9,6 @@
   
   &.sidebar-left-sm {
     .ant-menu {
-      transition: transform 0.3s ease;
-      transform: translate3d(0, 0 ,0);
       &.ant-menu-inline-collapsed {
         width: 60px;
         > .ant-menu-submenu .ant-menu-submenu-title,.ant-menu-item {
